--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 /target/
+
+### IntelliJ IDEA ###
+.idea
+out
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+### Eclipse ###
+.project
+.classpath
+.settings/
