--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ nbdist/
 .project
 .classpath
 .settings/
+src/main/java/com/fun/util/contstant/ResultContant.java
+src/main/java/com/fun/util/contstant/ResultContant.java
